--- a/src/Components/index.css
+++ b/src/Components/index.css
@@ -1,7 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 body {
-    background-color: #cbcedadd
+    background-color: #cbceda;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
