--- a/src/Components/index.css
+++ b/src/Components/index.css
@@ -17,7 +17,7 @@ html {
 @media (max-width: 640px) {
 
     /* Styles for small screens (mobile devices) */
-    .resize-main {
+    .resize {
         width: 90%;
     }
 }
@@ -25,7 +25,7 @@ html {
 @media (min-width: 640px) {
 
     /* Styles for medium screens (tablets and larger phones) */
-    .resize-main {
+    .resize {
         width: 80%;
     }
 }
@@ -33,16 +33,16 @@ html {
 @media (min-width: 768px) {
 
     /* Styles for large screens (desktops) */
-    .resize-main {
-        width: 60%;
+    .resize {
+        width: 65%;
     }
 }
 
 @media (min-width: 1024px) {
 
     /* Styles for extra-large screens (large desktops) */
-    .resize-main {
-        width: 50%;
+    .resize {
+        width: 70%;
     }
 }
 
