--- a/frontend/src/Components/index.css
+++ b/frontend/src/Components/index.css
@@ -50,3 +50,10 @@ body {
         width: 563px;
     }
 }
+
+.glass {
+    background: rgba(255, 255, 255, 0.6);
+    /* White with 60% opacity */
+    backdrop-filter: blur(3px);
+    /* Adjust blur as needed */
+}
