--- a/src/Components/index.css
+++ b/src/Components/index.css
@@ -9,6 +9,10 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 /* Responsive classes */
 @media (max-width: 640px) {
 
